--- a/package.json
+++ b/package.json
@@ -37,11 +37,12 @@
     "@types/node": "20.19.9",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.53.0",
+    "@typescript-eslint/parser": "^8.53.0",
     "@vitest/coverage-v8": "4.0.9",
     "@vitest/ui": "4.0.9",
     "babel-jest": "^30.0.2",
     "eslint": "~8.57.0",
-    "eslint-config-next": "^16.0.1",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jsx-a11y": "6.10.1",
     "eslint-plugin-playwright": "^1.6.2",
